--- a/public/contacts.html
+++ b/public/contacts.html
@@ -70,7 +70,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -149,7 +149,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -307,7 +307,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -454,7 +454,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -660,7 +660,7 @@
                                 <div class="col-md-2 col-sm-4 col-xs-6">
                                     <div class="c-item">
                                         <a href="" class="ci-avatar">
-                                            <img src="img/contacts/trump.png" alt="">
+                                            <img src="img/contacts/2.png" alt="">
                                         </a>
 
                                         <div class="c-info">
@@ -830,7 +830,7 @@
                                 <div class="col-md-2 col-sm-4 col-xs-6">
                                     <div class="c-item">
                                         <a href="" class="ci-avatar">
-                                            <img src="img/contacts/1trump.png" alt="">
+                                            <img src="img/contacts/12.png" alt="">
                                         </a>
 
                                         <div class="c-info">
@@ -931,7 +931,7 @@
                                 <div class="col-md-2 col-sm-4 col-xs-6">
                                     <div class="c-item">
                                         <a href="" class="ci-avatar">
-                                            <img src="img/contacts/trump.png" alt="">
+                                            <img src="img/contacts/2.png" alt="">
                                         </a>
 
                                         <div class="c-info">
@@ -1101,7 +1101,7 @@
                                 <div class="col-md-2 col-sm-4 col-xs-6">
                                     <div class="c-item">
                                         <a href="" class="ci-avatar">
-                                            <img src="img/contacts/1trump.png" alt="">
+                                            <img src="img/contacts/12.png" alt="">
                                         </a>
 
                                         <div class="c-info">
