--- a/public/lockscreen.html
+++ b/public/lockscreen.html
@@ -18,7 +18,7 @@
     <body class="login-content">
         <div class="lc-block lcb-alt toggled" id="l-lockscreen">
 
-            <img class="lcb-user" src="img/profile-pics/trump.png" alt="">
+            <img class="lcb-user" src="img/profile-pics/2.jpg" alt="">
 
             <div class="fg-line">
                 <input type="password" class="form-control text-center" placeholder="Password">
