--- a/public/media.html
+++ b/public/media.html
@@ -72,7 +72,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -151,7 +151,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -309,7 +309,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -456,7 +456,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -711,9 +711,9 @@
                                     </div>
                                 </div>
 
-                                <div data-src="media/gallery/trump.png" class="col-sm-2 col-xs-6" data-sub-html="<em><h3>This is a caption heading</h3><p>Here goes the description...</p></em>">
+                                <div data-src="media/gallery/2.png" class="col-sm-2 col-xs-6" data-sub-html="<em><h3>This is a caption heading</h3><p>Here goes the description...</p></em>">
                                     <div class="lightbox-item">
-                                        <img src="media/gallery/thumbs/trump.png" alt=""  />
+                                        <img src="media/gallery/thumbs/2.png" alt=""  />
                                     </div>
                                 </div>
 
@@ -755,7 +755,7 @@
 
                                 <div data-src="https://www.youtube.com/watch?v=u8OZoyHvX78" class="col-sm-2 col-xs-6">
                                     <div class="lightbox-item">
-                                        <img src="media/gallery/thumbs/trump.png" alt=""  />
+                                        <img src="media/gallery/thumbs/2.png" alt=""  />
                                     </div>
                                 </div>
 
@@ -847,7 +847,7 @@
                                         </div>
                                     </div>
                                     <div class="item">
-                                        <img src="media/carousel/c-trump.png" alt="">
+                                        <img src="media/carousel/c-2.png" alt="">
                                     </div>
                                     <div class="item">
                                         <img src="media/carousel/c-3.jpg" alt="">
