--- a/public/photo-timeline.html
+++ b/public/photo-timeline.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -455,7 +455,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -661,9 +661,9 @@
                                             </div>
                                         </div>
 
-                                        <div data-src="media/gallery/trump.png">
+                                        <div data-src="media/gallery/2.png">
                                             <div class="lightbox-item">
-                                                <img src="media/gallery/thumbs/trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/2.png" alt="" />
                                             </div>
                                         </div>
 
@@ -714,9 +714,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/13.jpg">
@@ -769,9 +769,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/13.jpg">
@@ -856,9 +856,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/13.jpg">
@@ -897,9 +897,9 @@
                                             </div>
                                         </div>
 
-                                        <div data-src="media/gallery/trump.png">
+                                        <div data-src="media/gallery/2.png">
                                             <div class="lightbox-item">
-                                                <img src="media/gallery/thumbs/trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/2.png" alt="" />
                                             </div>
                                         </div>
 
@@ -950,9 +950,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/13.jpg">
@@ -1022,9 +1022,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/13.jpg">
@@ -1072,9 +1072,9 @@
                                                 <img src="media/gallery/thumbs/11.jpg" alt="" />
                                             </div>
                                         </div>
-                                        <div data-src="media/gallery/1trump.png">
+                                        <div data-src="media/gallery/12.png">
                                             <div class="lightbox-item p-item">
-                                                <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                                <img src="media/gallery/thumbs/12.png" alt="" />
                                             </div>
                                         </div>
                                         <div data-src="media/gallery/14.jpg">
