--- a/public/photos.html
+++ b/public/photos.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -455,7 +455,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -652,9 +652,9 @@
                                      </div>
                                  </div>
 
-                                 <div data-src="media/gallery/trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/2.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/2.png" alt="" />
                                      </div>
                                  </div>
 
@@ -705,9 +705,9 @@
                                          <img src="media/gallery/thumbs/11.jpg" alt="" />
                                      </div>
                                  </div>
-                                 <div data-src="media/gallery/1trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/12.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/12.png" alt="" />
                                      </div>
                                  </div>
                                  <div data-src="media/gallery/13.jpg" class="col-md-2 col-sm-4 col-xs-6">
@@ -755,9 +755,9 @@
                                          <img src="media/gallery/thumbs/21.jpg" alt="" />
                                      </div>
                                  </div>
-                                 <div data-src="media/gallery/2trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/22.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/2trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/22.png" alt="" />
                                      </div>
                                  </div>
                                  <div data-src="media/gallery/23.jpg" class="col-md-2 col-sm-4 col-xs-6">
@@ -776,9 +776,9 @@
                                      </div>
                                  </div>
 
-                                 <div data-src="media/gallery/trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/2.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/2.png" alt="" />
                                      </div>
                                  </div>
 
@@ -829,9 +829,9 @@
                                          <img src="media/gallery/thumbs/11.jpg" alt="" />
                                      </div>
                                  </div>
-                                 <div data-src="media/gallery/1trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/12.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/12.png" alt="" />
                                      </div>
                                  </div>
                                  <div data-src="media/gallery/13.jpg" class="col-md-2 col-sm-4 col-xs-6">
@@ -879,9 +879,9 @@
                                          <img src="media/gallery/thumbs/21.jpg" alt="" />
                                      </div>
                                  </div>
-                                 <div data-src="media/gallery/2trump.png" class="col-md-2 col-sm-4 col-xs-6">
+                                 <div data-src="media/gallery/22.png" class="col-md-2 col-sm-4 col-xs-6">
                                      <div class="lightbox-item p-item">
-                                         <img src="media/gallery/thumbs/2trump.png" alt="" />
+                                         <img src="media/gallery/thumbs/22.png" alt="" />
                                      </div>
                                  </div>
                                  <div data-src="media/gallery/23.jpg" class="col-md-2 col-sm-4 col-xs-6">
