--- a/public/profile-connections.html
+++ b/public/profile-connections.html
@@ -70,7 +70,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -149,7 +149,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -454,7 +454,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -573,7 +573,7 @@
                             <div class="pmo-pic">
                                 <div class="p-relative">
                                     <a href="">
-                                        <img src="img/profile-pics/trump.png" alt="">
+                                        <img src="img/profile-pics/2.jpg" alt="">
                                     </a>
 
                                     <div class="dropdown pmop-message">
@@ -628,7 +628,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-sm-3 col-md-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-sm-3 col-md-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -652,7 +652,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-sm-3 col-md-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-sm-3 col-md-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -725,7 +725,7 @@
                                     <div class="col-md-3 col-sm-4 col-xs-6">
                                         <div class="c-item">
                                             <a href="" class="ci-avatar">
-                                                <img src="img/contacts/trump.png" alt="">
+                                                <img src="img/contacts/2.png" alt="">
                                             </a>
 
                                             <div class="c-info">
@@ -895,7 +895,7 @@
                                     <div class="col-md-3 col-sm-4 col-xs-6">
                                         <div class="c-item">
                                             <a href="" class="ci-avatar">
-                                                <img src="img/contacts/1trump.png" alt="">
+                                                <img src="img/contacts/12.png" alt="">
                                             </a>
 
                                             <div class="c-info">
