--- a/public/profile-photos.html
+++ b/public/profile-photos.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -308,7 +308,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -457,7 +457,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -576,7 +576,7 @@
                             <div class="pmo-pic">
                                 <div class="p-relative">
                                     <a href="">
-                                        <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                        <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                     </a>
 
                                     <div class="dropdown pmop-message">
@@ -631,7 +631,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -655,7 +655,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -712,9 +712,9 @@
                                         </div>
                                     </div>
 
-                                    <div data-src="media/gallery/trump.png" class="col-md-3 col-sm-4 col-xs-6">
+                                    <div data-src="media/gallery/2.png" class="col-md-3 col-sm-4 col-xs-6">
                                         <div class="lightbox-item p-item">
-                                            <img src="media/gallery/thumbs/trump.png" alt="" />
+                                            <img src="media/gallery/thumbs/2.png" alt="" />
                                         </div>
                                     </div>
 
@@ -765,9 +765,9 @@
                                             <img src="media/gallery/thumbs/11.jpg" alt="" />
                                         </div>
                                     </div>
-                                    <div data-src="media/gallery/1trump.png" class="col-md-3 col-sm-4 col-xs-6">
+                                    <div data-src="media/gallery/12.png" class="col-md-3 col-sm-4 col-xs-6">
                                         <div class="lightbox-item p-item">
-                                            <img src="media/gallery/thumbs/1trump.png" alt="" />
+                                            <img src="media/gallery/thumbs/12.png" alt="" />
                                         </div>
                                     </div>
                                     <div data-src="media/gallery/13.jpg" class="col-md-3 col-sm-4 col-xs-6">
@@ -815,9 +815,9 @@
                                             <img src="media/gallery/thumbs/21.jpg" alt="" />
                                         </div>
                                     </div>
-                                    <div data-src="media/gallery/2trump.png" class="col-md-3 col-sm-4 col-xs-6">
+                                    <div data-src="media/gallery/22.png" class="col-md-3 col-sm-4 col-xs-6">
                                         <div class="lightbox-item p-item">
-                                            <img src="media/gallery/thumbs/2trump.png" alt="" />
+                                            <img src="media/gallery/thumbs/22.png" alt="" />
                                         </div>
                                     </div>
                                     <div data-src="media/gallery/23.jpg" class="col-md-3 col-sm-4 col-xs-6">
