--- a/public/snippets/header.html
+++ b/public/snippets/header.html
@@ -53,7 +53,7 @@
               <a class="lv-item" href="">
                 <div class="media">
                   <div class="pull-left">
-                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                   </div>
                   <div class="media-body">
                     <div class="lv-title">Jonathan Morris</div>
@@ -132,7 +132,7 @@
               <a class="lv-item" href="">
                 <div class="media">
                   <div class="pull-left">
-                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                   </div>
                   <div class="media-body">
                     <div class="lv-title">Jonathan Morris</div>
