--- a/public/textual-menu.html
+++ b/public/textual-menu.html
@@ -70,7 +70,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -148,7 +148,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -220,7 +220,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -948,7 +948,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
