--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div class="profile-menu">
         <a href="">
           <div class="profile-pic">
-            <img src="img/profile-pics/trump.png" alt="">
+            <img src="img/profile-pics/2.jpg" alt="">
           </div>
           <div class="profile-info">
             John Mariner
@@ -58,7 +58,7 @@
         <a class="lv-item" href="">
           <div class="media">
             <div class="pull-left p-relative">
-              <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+              <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
               <i class="chat-status-busy"></i>
             </div>
             <div class="media-body">
@@ -212,6 +212,7 @@
         </div>
 
         <div class="mini-charts" >
+          
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <div class="mini-charts-item bgm-cyan">
@@ -638,7 +639,7 @@
                     <a class="lv-item" href="">
                       <div class="media">
                         <div class="pull-left">
-                          <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                          <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                         </div>
                         <div class="media-body">
                           <div class="lv-title">Jonathan Morris</div>
