--- a/public/pricing-table.html
+++ b/public/pricing-table.html
@@ -70,7 +70,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -149,7 +149,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -454,7 +454,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
