--- a/public/profile-about.html
+++ b/public/profile-about.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -308,7 +308,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -455,7 +455,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -574,7 +574,7 @@
                             <div class="pmo-pic">
                                 <div class="p-relative">
                                     <a href="">
-                                        <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                        <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                     </a>
 
                                     <div class="dropdown pmop-message">
@@ -629,7 +629,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -653,7 +653,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
