--- a/public/profile-timeline.html
+++ b/public/profile-timeline.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -308,7 +308,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -457,7 +457,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -576,7 +576,7 @@
                             <div class="pmo-pic">
                                 <div class="p-relative">
                                     <a href="">
-                                        <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                        <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                     </a>
 
                                     <div class="dropdown pmop-message">
@@ -631,7 +631,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -655,7 +655,7 @@
                                             <img class="img-circle" src="img/profile-pics/1.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
-                                            <img class="img-circle" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-circle" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <a href="" class="col-xs-2">
                                             <img class="img-circle" src="img/profile-pics/3.jpg" alt="">
@@ -681,7 +681,7 @@
                                 <div class="t-view" data-tv-type="text">
                                     <div class="tv-header media">
                                         <a href="" class="tvh-user pull-left">
-                                            <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <div class="media-body p-t-5">
                                             <strong class="d-block">John Mariner</strong>
@@ -738,7 +738,7 @@
 
                                             <li class="media">
                                                 <a href="" class="tvh-user pull-left">
-                                                    <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                                 </a>
                                                 <div class="media-body">
                                                     <strong class="d-block">Wernall Parnell</strong>
@@ -775,7 +775,7 @@
                                 <div class="t-view" data-tv-type="image">
                                     <div class="tv-header media">
                                         <a href="" class="tvh-user pull-left">
-                                            <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <div class="media-body p-t-5">
                                             <strong class="d-block">John Mariner</strong>
@@ -839,7 +839,7 @@
 
                                             <li class="media">
                                                 <a href="" class="tvh-user pull-left">
-                                                    <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                                 </a>
                                                 <div class="media-body">
                                                     <strong class="d-block">David Simpson</strong>
@@ -863,7 +863,7 @@
                                 <div class="t-view" data-tv-type="video">
                                     <div class="tv-header media">
                                         <a href="" class="tvh-user pull-left">
-                                            <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <div class="media-body p-t-5">
                                             <strong class="d-block">John Mariner</strong>
@@ -947,7 +947,7 @@
                                 <div class="t-view" data-tv-type="image">
                                     <div class="tv-header media">
                                         <a href="" class="tvh-user pull-left">
-                                            <img class="img-responsive" src="img/profile-pics/trump.png" alt="">
+                                            <img class="img-responsive" src="img/profile-pics/2.jpg" alt="">
                                         </a>
                                         <div class="media-body p-t-5">
                                             <strong class="d-block">John Mariner</strong>
@@ -980,9 +980,9 @@
                                                 </div>
                                             </div>
 
-                                            <div data-src="media/gallery/trump.png" class="col-sm-2 col-xs-3">
+                                            <div data-src="media/gallery/2.png" class="col-sm-2 col-xs-3">
                                                 <div class="lightbox-item">
-                                                    <img src="media/gallery/thumbs/trump.png" alt=""  />
+                                                    <img src="media/gallery/thumbs/2.png" alt=""  />
                                                 </div>
                                             </div>
 
