--- a/public/texas-region-h-dashboard.html
+++ b/public/texas-region-h-dashboard.html
@@ -25,7 +25,7 @@
       <div class="profile-menu">
         <a href="">
           <div class="profile-pic">
-            <img src="img/profile-pics/trump.png" alt="">
+            <img src="img/profile-pics/2.jpg" alt="">
           </div>
           <div class="profile-info">
             John Mariner
@@ -63,7 +63,7 @@
         <a class="lv-item" href="">
           <div class="media">
             <div class="pull-left p-relative">
-              <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+              <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
               <i class="chat-status-busy"></i>
             </div>
             <div class="media-body">
@@ -656,7 +656,7 @@
                     <a class="lv-item" href="">
                       <div class="media">
                         <div class="pull-left">
-                          <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                          <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                         </div>
                         <div class="media-body">
                           <div class="lv-title">Jonathan Morris</div>
