--- a/public/texas-water-planning-map.html
+++ b/public/texas-water-planning-map.html
@@ -76,7 +76,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -155,7 +155,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -314,7 +314,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -420,7 +420,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -767,7 +767,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
