--- a/public/wall.html
+++ b/public/wall.html
@@ -71,7 +71,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -150,7 +150,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
@@ -308,7 +308,7 @@
                 <div class="profile-menu">
                     <a href="">
                         <div class="profile-pic">
-                            <img src="img/profile-pics/trump.png" alt="">
+                            <img src="img/profile-pics/2.jpg" alt="">
                         </div>
 
                         <div class="profile-info">
@@ -455,7 +455,7 @@
                     <a class="lv-item" href="">
                         <div class="media">
                             <div class="pull-left p-relative">
-                                <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                 <i class="chat-status-busy"></i>
                             </div>
                             <div class="media-body">
@@ -644,7 +644,7 @@
 
                                         <li class="wa-users">
                                             <a href=""><img src="img/profile-pics/1.jpg" alt=""></a>
-                                            <a href=""><img src="img/profile-pics/trump.png" alt=""></a>
+                                            <a href=""><img src="img/profile-pics/2.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/3.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/5.jpg" alt=""></a>
                                         </li>
@@ -772,7 +772,7 @@
                                 <div class="card-header">
                                     <div class="media">
                                         <div class="pull-left">
-                                            <img class="lv-img" src="img/profile-pics/trump.png" alt="">
+                                            <img class="lv-img" src="img/profile-pics/2.jpg" alt="">
                                         </div>
 
                                         <div class="media-body m-t-5">
@@ -785,11 +785,11 @@
                                     <p>Donec velit libero, gravida vel diam ut, lobortis mollis quam. Morbi posuere egestas posuere. Curabitur in dui sollicitudin, lacinia magna at, laoreet sapien. Integer vitae eros nulla.</p>
 
                                     <div class="wall-img-preview lightbox clearfix">
-                                        <div class="wip-item" data-src="media/gallery/trump.png" style="background-image: url(media/gallery/trump.png);">
-                                            <img src="media/gallery/thumbs/trump.png">
+                                        <div class="wip-item" data-src="media/gallery/2.png" style="background-image: url(media/gallery/2.png);">
+                                            <img src="media/gallery/thumbs/2.png">
                                         </div>
                                         <div class="wip-item" data-src="media/gallery/3.jpg" style="background-image: url(media/gallery/3.jpg);">
-                                            <img src="media/gallery/thumbs/trump.png" alt="">
+                                            <img src="media/gallery/thumbs/2.png" alt="">
                                         </div>
                                     </div>
 
@@ -800,7 +800,7 @@
                                         </li>
 
                                         <li class="wa-users">
-                                            <a href=""><img src="img/profile-pics/trump.png" alt=""></a>
+                                            <a href=""><img src="img/profile-pics/2.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/3.jpg" alt=""></a>
                                         </li>
                                     </ul>
@@ -885,7 +885,7 @@
                                         </li>
 
                                         <li class="wa-users">
-                                            <a href=""><img src="img/profile-pics/trump.png" alt=""></a>
+                                            <a href=""><img src="img/profile-pics/2.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/3.jpg" alt=""></a>
                                         </li>
                                     </ul>
@@ -939,7 +939,7 @@
                                 <div class="card-header">
                                     <div class="media">
                                         <div class="pull-left">
-                                            <img class="lv-img" src="img/profile-pics/trump.png" alt="">
+                                            <img class="lv-img" src="img/profile-pics/2.jpg" alt="">
                                         </div>
 
                                         <div class="media-body m-t-5">
@@ -1103,8 +1103,8 @@
                                         <div class="wip-item" data-src="media/gallery/11.jpg" style="background-image: url(media/gallery/11.jpg);">
                                             <img src="media/gallery/thumbs/11.jpg" alt="">
                                         </div>
-                                        <div class="wip-item" data-src="media/gallery/1trump.png" style="background-image: url(media/gallery/1trump.png);">
-                                            <img src="media/gallery/thumbs/1trump.png" alt="">
+                                        <div class="wip-item" data-src="media/gallery/12.png" style="background-image: url(media/gallery/12.png);">
+                                            <img src="media/gallery/thumbs/12.png" alt="">
                                         </div>
                                         <div class="wip-item" data-src="media/gallery/13.jpg" style="background-image: url(media/gallery/13.jpg);">
                                             <img src="media/gallery/thumbs/13.jpg" alt="">
@@ -1253,8 +1253,8 @@
                                         <div class="wip-item" data-src="media/gallery/21.jpg" style="background-image: url(media/gallery/21.jpg);">
                                             <img src="media/gallery/thumbs/21.jpg" alt="">
                                         </div>
-                                        <div class="wip-item" data-src="media/gallery/2trump.png" style="background-image: url(media/gallery/2trump.png);">
-                                            <img src="media/gallery/thumbs/2trump.png" alt="">
+                                        <div class="wip-item" data-src="media/gallery/22.png" style="background-image: url(media/gallery/22.png);">
+                                            <img src="media/gallery/thumbs/22.png" alt="">
                                         </div>
                                         <div class="wip-item" data-src="media/gallery/23.jpg" style="background-image: url(media/gallery/23.jpg);">
                                             <img src="media/gallery/thumbs/23.jpg" alt="">
@@ -1280,7 +1280,7 @@
                                         </li>
 
                                         <li class="wa-users">
-                                            <a href=""><img src="img/profile-pics/trump.png" alt=""></a>
+                                            <a href=""><img src="img/profile-pics/2.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/3.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/1.jpg" alt=""></a>
                                             <a href=""><img src="img/profile-pics/6.jpg" alt=""></a>
@@ -1295,7 +1295,7 @@
                                     <div class="wcl-list">
                                         <div class="media">
                                             <a href="" class="pull-left">
-                                                <img src="img/profile-pics/trump.png" alt="" class="lv-img-sm">
+                                                <img src="img/profile-pics/2.jpg" alt="" class="lv-img-sm">
                                             </a>
 
                                             <div class="media-body">
@@ -1449,7 +1449,7 @@
                                 <div class="card-header">
                                     <div class="media">
                                         <div class="pull-left">
-                                            <img class="lv-img" src="img/profile-pics/trump.png" alt="">
+                                            <img class="lv-img" src="img/profile-pics/2.jpg" alt="">
                                         </div>
 
                                         <div class="media-body m-t-5">
@@ -1480,8 +1480,8 @@
                                         <div class="wip-item" data-src="media/gallery/11.jpg" style="background-image: url(media/gallery/11.jpg);">
                                             <img src="media/gallery/thumbs/11.jpg" alt="">
                                         </div>
-                                        <div class="wip-item" data-src="media/gallery/1trump.png" style="background-image: url(media/gallery/1trump.png);">
-                                            <img src="media/gallery/thumbs/1trump.png" alt="">
+                                        <div class="wip-item" data-src="media/gallery/12.png" style="background-image: url(media/gallery/12.png);">
+                                            <img src="media/gallery/thumbs/12.png" alt="">
                                         </div>
                                         <div class="wip-item" data-src="media/gallery/13.jpg" style="background-image: url(media/gallery/13.jpg);">
                                             <img src="media/gallery/thumbs/13.jpg" alt="">
@@ -1725,7 +1725,7 @@
                                         <a class="lv-item" href="">
                                             <div class="media">
                                                 <div class="pull-left">
-                                                    <img class="lv-img-sm" src="img/profile-pics/trump.png" alt="">
+                                                    <img class="lv-img-sm" src="img/profile-pics/2.jpg" alt="">
                                                 </div>
                                                 <div class="media-body">
                                                     <div class="lv-title">Jonathan Morris</div>
